# utility_async

./: .env.example  .flake8  LICENSE  README.md  pyproject.toml
dbase/: main.py
dbase/api/: endpoints.py
dbase/core/: celery.py  config.py  db.py
dbase/core/temp/: apartments.csv  buildings.csv  counter_values.csv  counters.csv  tariffs.csv
dbase/services/: commands.py  utils.py
docker/: docker-compose-redis.yml
web/: main.py
web/api/: routers.py  utils.py
web/api/endpoints/: __init__.py  bills.py  houses.py
web/core/: client.py  config.py
web/schemas/: bills.py  houses.py
