[tool.poetry]
name = "utility-async"
version = "0.1.0"
description = "Async version"
authors = ["Alex Naumov <algena75@yandex.ru>"]
readme = "README.md"
packages = [
    {include = "web"},
    {include = "dbase"}
]


[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {version = "0.29.0", extras = ["standard"]}
pydantic-settings = "2.2.1"


[tool.poetry.group.web.dependencies]
fastapi = "0.110.2"


[tool.poetry.group.dbase.dependencies]
asyncio = "^3.4.3"
asyncpg = {version = "0.29.0", extras = ["postgres"]}
aiohttp = "^3.10.5"
celery = {version = "^5.4.0", extras = ["redis"]}


[tool.poetry.group.test.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
